大屏demo样式单独提出来

--- a/WebContent/demo/index_headquarters_demo.html
+++ b/WebContent/demo/index_headquarters_demo.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../crm/dist/css/map-style.css">
   <link rel="stylesheet" href="../crm/dist/css/onoffset.css">
   <!-- 总部首页 style -->
-  <link rel="stylesheet" href="../crm/dist/css/headquarters/index_headquarters.css">
+  <link rel="stylesheet" href="./css/index_headquarters_demo.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
