--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -435,7 +435,7 @@
 	    }else if(target==2){//店长
 	    	dynamicDto = {
   				beginDate:begin_end_date,
-                storeNo:number_str,
+                storeNo:storeNo,
                 searchstr:searchstr,
   		  		employeeNo:employeeId,
   		  		target:target
@@ -579,7 +579,7 @@
 	    }else if(target==2){//店长
 	    	dynamicDto = {
   				beginDate:begin_end_date,
-                storeNo:number_str,
+                storeNo:storeNo,
                 searchstr:searchstr,
   		  		employeeNo:employeeId,
   		  		target:target
