总部首页-右上角本月修改为当月

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -351,7 +351,7 @@
           <div class="box-header h4 text-right" style="margin-bottom: -5px; margin-top:0;font-size: 12px;cursor: pointer;color: #747474" id="customer_analysis_more">更多</div>
           <div class="box-body no-padding">
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb3">本月消费用户</h4>
+              <h4 class="gaugetb3">当月消费用户</h4>
 			  <input type="hidden" id="tradesumofmonthCustmomerHid">
               <input type="hidden" id="tradesumoflastmonthCustmomerHid">
               <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
@@ -359,12 +359,12 @@
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div> -->
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb2">本月新增社员</h4>
+              <h4 class="gaugetb2">当月新增社员</h4>
 			  <input type="hidden" id="openCardUserMonthcountHid">
               <div class="col-sm-4 no-padding gaugetb2" id="openCardUserMonthcount"></div>
             </div>
             <div class="info_bottom_dl info_bottom_left pull-right col-sm-4 no-margin" style="display: none;">
-              <h4 class="gaugetb4">本月成交单量</h4>
+              <h4 class="gaugetb4">当月成交单量</h4>
 			  <input type="hidden" id="tradesumofmonthOrderHid">
               <input type="hidden" id="tradesumoflastmonthOrderHid">
               <div class="col-sm-4 no-padding gaugetb4" id="tradesumofmonthOrder"></div>
