总部首页-历史毛利修改为昨日毛利

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -351,12 +351,8 @@
           <div class="box-header h4 text-right" style="margin-bottom: -5px; margin-top:0;font-size: 12px;cursor: pointer;color: #747474" id="customer_analysis_more">更多</div>
           <div class="box-body no-padding">
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb3">当月消费用户</h4>
-			  <input type="hidden" id="tradesumofmonthCustmomerHid">
-              <input type="hidden" id="tradesumoflastmonthCustmomerHid">
-              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
-              <!-- <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
-              <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div> -->
+              <h4 class="gaugetb5">昨日毛利</h4>
+              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofyesprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb2">当月新增社员</h4>
@@ -372,14 +368,16 @@
               <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div> -->
             </div>
             <div class="info_bottom_dl info_bottom_left pull-right col-sm-6 no-margin" style="display: none;">
-              <h4 class="gaugetb5">当月毛利</h4>
-              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofcurmonthsprofit"></div>
+              <h4 class="gaugetb3">当月消费用户</h4>
+			  <input type="hidden" id="tradesumofmonthCustmomerHid">
+              <input type="hidden" id="tradesumoflastmonthCustmomerHid">
+              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
+              <!-- <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
+              <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div> -->
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb3">历史累计消费用户</h4>
-			  <input type="hidden" id="tradesumofhistoryCustmomerHid"/>
-	          <input type="hidden" id="tradesumoflasthistoryCustmomerHid"/>
-              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofhistoryCustmomer"></div>
+              <h4 class="gaugetb5">当月毛利</h4>
+              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofcurmonthsprofit"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
             <h4 class="gaugetb2">历史累计社员</h4>
@@ -393,8 +391,10 @@
               <div class="col-sm-4 no-padding gaugetb4" id="tradesumofhistoryOrder"></div>
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
-              <h4 class="gaugetb5">历史毛利</h4>
-              <div class="col-sm-8 no-padding gaugetb5" id="tradesumofHistoryprofit"></div>
+              <h4 class="gaugetb3">历史累计消费用户</h4>
+			  <input type="hidden" id="tradesumofhistoryCustmomerHid"/>
+	          <input type="hidden" id="tradesumoflasthistoryCustmomerHid"/>
+              <div class="col-sm-4 no-padding gaugetb3" id="tradesumofhistoryCustmomer"></div>
             </div>
             
           </div>
