--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -141,25 +141,25 @@
                     </div>
                 </div>
                 <div class="box box-default">
-                    <div class="box-header h4 text-light-blue"><strong>用户忠实度分布</strong></div>
+                    <div class="box-header h4 text-light-blue"><strong>用户忠诚度分布</strong></div>
                     <div class="box-body">
                         <div class="col-sm-12">
                             <!--<div id="main2" style="height: 350px;"></div>-->
-                            <div class="pull-left yonghu yonghu1 text-center" id="yonghu1"><span id="userR3">忠实用户<br>5</span></div>
+                            <div class="pull-left yonghu yonghu1 text-center" id="yonghu1"><span id="userR3">忠诚用户<br>5</span></div>
                             <div class="pull-left yonghu yonghu4 text-center" id="yonghu4"><span id="userR4">待确认用户<br>60</span></div>
                             <div class="pull-left yonghu yonghu2 text-center" id="yonghu2"><span id="userR2">僵尸用户<br>30</span></div>
                             <div class="pull-left yonghu yonghu3 text-center" id="yonghu3"><span id="userR1">无效用户<br>5</span></div>
                             <div class="pull-left yonghu yonghu5 text-center" id="yonghu5"><span id="userR5">无交易用户<br>5</span></div>
                         </div>
-                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、忠实用户=社员+历史消费3次以上+400购物。</p>
-                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、无效用户=仅消费1次且从未使用app的用户。</p>
+                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、忠诚用户=社员+历史消费3次以上+400购物+实名认证用户。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、无效用户=仅消费1次且从未使用app的用户 或 单店单日统一手机号段（前7位完全一致）注册数5个以上的用户。</p>
                         <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">3、僵尸用户=2018年未消费。</p>
-                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">4、待确认用户=注册人数-忠实用户-无效用户-僵尸用户-无交易用户。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">4、待确认用户=注册人数-忠诚用户-无效用户-僵尸用户-无交易用户。</p>
                     </div>
                 </div>
                 <div class="box box-default">
                     <div
-                            class="box-header h4 text-light-blue"><strong>用户来源分布</strong><small style="padding-left: 15px;">口径说明：假定有效用户=忠实用户+待确认用户</small></div>
+                            class="box-header h4 text-light-blue"><strong>用户来源分布</strong><small style="padding-left: 15px;">口径说明：假定有效用户=忠诚用户+待确认用户</small></div>
                     <div class="box-body" style="padding-top: 25px;">
                         <div class="col-sm-6 no-padding" id="main3" style="height: 450px;"></div>
                         <div class="col-sm-6 no-padding" id="main4" style="height: 450px;"></div>
@@ -1428,7 +1428,7 @@
                     var yonghu1 = document.getElementById("yonghu1");
                     var userR3Width = (userR3/customer_number).toFixed(2);
                     yonghu1.style.width = userR3Width*(100-userR1Width*100)+"%";
-                    document.getElementById('userR3').innerHTML="忠实用户<br>"+changeMoney(parseInt(userR3))+"("+(userR3Width*(100-userR1Width*100)).toFixed(2)+"%"+")";
+                    document.getElementById('userR3').innerHTML="忠诚用户<br>"+changeMoney(parseInt(userR3))+"("+(userR3Width*(100-userR1Width*100)).toFixed(2)+"%"+")";
 
                     var yonghu2 = document.getElementById("yonghu2");
                     var userR2Width = (userR2/customer_number).toFixed(2);
