订单档案毛利改为销售收入

--- a/WebContent/crm/searchData_return_order.html
+++ b/WebContent/crm/searchData_return_order.html
@@ -209,7 +209,7 @@
                   <th width="10%">退货时间</th>
                   <th width="9%">业务信息</th>
                   <th width="10%">人员信息</th>
-                  <td width="9%" style="font-weight:bold;">毛利（元）</td>
+                  <td width="9%" style="font-weight:bold;">销售收入（元）</td>
                   <th width="10%">订单标签</th>
                 </tr>
                 </tbody>
