--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -219,8 +219,8 @@
                         <div class="sl-v-list">
                             <div class="form-group has-success col-lg-3">
                                 <div style="display:block">
-                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="毛利最小金额"  id="min_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);" />&nbsp;--
-                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="毛利最大金额"  id="max_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
+                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="销售收入最小金额"  id="min_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);" />&nbsp;--
+                                    <input type="text" class="form-control" onkeyup="value=value.replace(/[^\d{1,}\.\d{1,}|\d{1,}]/g,'')" placeholder="销售收入最大金额"  id="max_money_auto" style="width:45%;display:inline;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
                                 </div>
                             </div>
                             <div class="form-group has-success col-lg-2">
@@ -232,7 +232,7 @@
                                 </select>
                             </div>
                             <font id="showprofitattention" style="top:7px;right:75px;color:#337ab7;font-size:16px;font-weight:bold;">!</font>
-                            <font id="profitattention" style="font-size: 12px; color:#337ab7;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; left: 750px; display: none;">毛利结算方式</font>
+                            <font id="profitattention" style="font-size: 12px; color:#337ab7;white-space: nowrap; position: absolute; top: -10px; z-index: 1000; left: 750px; display: none;">销售收入结算方式</font>
                         </div>
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                   <td width="9%" style="font-weight:bold;">业务信息</td>
                   <td width="10%" style="font-weight:bold;">人员信息</td>
                   <td width="9%" style="font-weight:bold;" id="profit_sort"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                      <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">订单销售收入</font>毛利（元）<i class="fa fa-angle-up" id="profit_sort_label"></i></td>
+                      <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">订单销售收入</font>销售收入（元）<i class="fa fa-angle-up" id="profit_sort_label"></i></td>
                   <td width="10%" style="font-weight:bold;">营销费用</td>
                   <td width="10%" style="font-weight:bold;">订单标签</td>
                 </tr>
